--- a/Segundo_Examen/style.css
+++ b/Segundo_Examen/style.css
@@ -10,6 +10,17 @@ body {
     margin: 0 auto;
 }
 
+#cart-container {
+    display: flex; 
+    flex-direction: column;
+}
+.cart-item {
+    border: 3px solid black;
+    padding: 16px;
+    margin: 20px 0;
+}
+
+
 header {
     display: flex;
     justify-content: space-between;
