--- a/PYTHON/Noviembre-05/templates/index.html
+++ b/PYTHON/Noviembre-05/templates/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<h1>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/style.css') }}">
 </head>
 <body>
-    <h1>Hola desde Flask CTM</h1>
+    <h1>Hola desde Flask Wii</h1>
     <p>Que es el framework flask?</p>
     <h1>Estudiantes: </h1>
     <ol>
